Some progress on everything
